--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "feedparser": "^0.19.2",
     "slack-client": "^1.2.2",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "redis": "^0.12.1",
+    "hiredis": "^0.1.17"
   },
   "devDependencies": {}
 }
