--- a/config.js.example
+++ b/config.js.example
@@ -1,6 +1,6 @@
 exports.config = {
 
-	// The token probided but the slack bot integration
+	// The token probided by the slack bot integration
 	"token":          "xxxx-xxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx",
 
 	// Automatically reconnect upon disconnect
